2006-03-22  Murray Cumming  <murrayc@murrayc.com>

	* gtk/gtkmm/listviewtext.cc:
	* gtk/gtkmm/listviewtext.h: Renamed some member variables, and 
	used ModelColumns via member instance instead of pointer, to 
	simplify code.
	* configure.in:
	* examples/book/treeview/Makefile.am:
	* examples/book/treeview/listviewtext/Makefile.am:
	* examples/book/treeview/listviewtext/examplewindow.cc:
	* examples/book/treeview/listviewtext/examplewindow.h:
	* examples/book/treeview/listviewtext/main.cc: Added example, 
	based on treeview/list example.
	* gtk/gtkmm.h: Include listviewtext.h

2006-03-22  Murray Cumming  <murrayc@murrayc.com>

	* gtk/gtkmm/Makefile.am:
	* gtk/gtkmm/listviewtext.cc:
	* gtk/gtkmm/listviewtext.h: Added ListViewText, a very simple TreeView 
	convenience class, from J. Baltasar García Perez-Schofield in bug #329333, 
	with formatting and constness corrections.

2006-03-10  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/drawingarea/clock/clock.cc:
	* examples/book/drawingarea/joins/myarea.cc: Update the cairomm enum values for the 
	latest cairomm API.

2006-03-08  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/combobox.hg: Added get/set_title() and corresponding
 	tearoff-title property.
	* gtk/src/iconview.ccg:
	* gtk/src/iconview.hg: Added drag and drop methods.
	* gtk/src/treeview.hg: Corrected a typo in the documentation.
	* tools/m4/convert_gtk.m4: Added new enum conversion.

2006-02-25  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/treeview.hg: Remove an extra : after a @deprecated.

2006-02-25  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/gtkmm-tut.xml: Signals appendix: Remove vague uninteresting stuff 
	about different functor types, and mention sigc::ptr_fun, mem_fun distinction earlier.

o2006-02-25  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/gtk_docs.xml: Regenerate from the C files.
	* gtk/src/gtk_docs_override.xml: Update the override for gtk_icon_theme_list_icons(), 