@@ -56,8 +56,8 @@
             <li><a href="tutorial/html/apb.html">Signals</a></li>
             <li><a href="tutorial/html/ch07.html">Container Widgets</a></li>
             <li><a href="tutorial/html/ch08.html">TreeView</a></li>
-            <li><a href="tutorial/html/ch18.html">Memory Management</a></li>
-            <li><a href="tutorial/html/ch19.html">Glade and libglademm</a></li>
+            <li><a href="tutorial/html/ch19.html">Memory Management</a></li>
+            <li><a href="tutorial/html/ch20.html">Glade and libglademm</a></li>
 
            </ul>
            </p>
