@@ -1,5 +1,12 @@
 2006-03-22  Murray Cumming  <murrayc@murrayc.com>
 
+	* docs/index.html: Corrected links to chapters, now that 
+	we added a chapter in the middle. Bug #334989 from Rob Page.
+	* gtk/gtkmm/listviewtext.h: Added groups and newin doxygen 
+	tags.
+
+2006-03-22  Murray Cumming  <murrayc@murrayc.com>
+
 	* gtk/gtkmm/listviewtext.cc:
 	* gtk/gtkmm/listviewtext.h: Renamed some member variables, and 
 	used ModelColumns via member instance instead of pointer, to 
